--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -7,7 +7,7 @@
   }
 
   .sidebar-bg {
-    @apply bg-green-600;
+    @apply bg-sky-400;
   }
 
   /* Hide scrollbar for Chrome, Safari and Opera */
